language/move-lang/tests/move_check/expansion/duplicate_field_assign.move
module M {
    struct S { f: u64 }
    foo() {
        let f;
        S { f, f } = S { f: 0 };
    }
}
